# giallo.kak

./: .gitignore  AGENTS.md  Cargo.toml  DEBUG.md  DEBUG_SUMMARY.md  DESIGN.md  README.md  TODOS.md  build.rs
.github/: perf-baseline.json
.github/workflows/: README.md  build-release.yml
docs/: config.example.toml
rc/: giallo.kak
src/: cli.rs  commands.rs  config.rs  fifo.rs  highlight.rs  highlighting.rs  kakoune.rs  main.rs  registry_loader.rs  server.rs  server_resources.rs
tests/: README.md  e2e.rs  e2e_stress.rs  fixture_tests.rs  performance.rs  resource_monitor.rs  string_keyword_highlighting.rs  terraform_oneshot.rs
tests/fixtures/: generate_perf_fixtures.rs  go_sample.go  javascript_sample.js  python_sample.py  rust_sample.rs
