[package]
name = "giallo-kak"
version = "0.2.0"
edition = "2021"
authors = ["Yukai Huang <hi@yukai.dev>"]
description = "Kakoune syntax highlighter using TextMate grammars"
repository = "https://github.com/Yukaii/giallo.kak"
license = "MIT"
keywords = ["kakoune", "syntax-highlighting", "textmate", "editor"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.74"

[dependencies]
ctrlc = "3.4"
giallo = { version = "0.2.2", features = ["dump"] }
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5"
toml = "0.8"
which = "6"
